* Added implementation for Getting tensors, * Added implementation for getting the next word from the probability

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,81 +724,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/431   train_loss = 8.820\n",
+      "Epoch   0 Batch    0/431   train_loss = 8.821\n",
       "Epoch   0 Batch  128/431   train_loss = 8.821\n",
-      "Epoch   0 Batch  256/431   train_loss = 8.822\n",
-      "Epoch   0 Batch  384/431   train_loss = 8.821\n",
-      "Epoch   1 Batch   81/431   train_loss = 8.823\n",
-      "Epoch   1 Batch  209/431   train_loss = 8.821\n",
-      "Epoch   1 Batch  337/431   train_loss = 8.819\n",
-      "Epoch   2 Batch   34/431   train_loss = 8.822\n",
-      "Epoch   2 Batch  162/431   train_loss = 8.820\n",
-      "Epoch   2 Batch  290/431   train_loss = 8.822\n",
-      "Epoch   2 Batch  418/431   train_loss = 8.820\n",
+      "Epoch   0 Batch  256/431   train_loss = 8.823\n",
+      "Epoch   0 Batch  384/431   train_loss = 8.823\n",
+      "Epoch   1 Batch   81/431   train_loss = 8.822\n",
+      "Epoch   1 Batch  209/431   train_loss = 8.823\n",
+      "Epoch   1 Batch  337/431   train_loss = 8.822\n",
+      "Epoch   2 Batch   34/431   train_loss = 8.823\n",
+      "Epoch   2 Batch  162/431   train_loss = 8.821\n",
+      "Epoch   2 Batch  290/431   train_loss = 8.820\n",
+      "Epoch   2 Batch  418/431   train_loss = 8.824\n",
       "Epoch   3 Batch  115/431   train_loss = 8.823\n",
       "Epoch   3 Batch  243/431   train_loss = 8.822\n",
       "Epoch   3 Batch  371/431   train_loss = 8.823\n",
-      "Epoch   4 Batch   68/431   train_loss = 8.821\n",
-      "Epoch   4 Batch  196/431   train_loss = 8.821\n",
+      "Epoch   4 Batch   68/431   train_loss = 8.820\n",
+      "Epoch   4 Batch  196/431   train_loss = 8.823\n",
       "Epoch   4 Batch  324/431   train_loss = 8.821\n",
-      "Epoch   5 Batch   21/431   train_loss = 8.821\n",
-      "Epoch   5 Batch  149/431   train_loss = 8.819\n",
+      "Epoch   5 Batch   21/431   train_loss = 8.824\n",
+      "Epoch   5 Batch  149/431   train_loss = 8.823\n",
       "Epoch   5 Batch  277/431   train_loss = 8.822\n",
-      "Epoch   5 Batch  405/431   train_loss = 8.820\n",
-      "Epoch   6 Batch  102/431   train_loss = 8.822\n",
-      "Epoch   6 Batch  230/431   train_loss = 8.820\n",
-      "Epoch   6 Batch  358/431   train_loss = 8.820\n",
-      "Epoch   7 Batch   55/431   train_loss = 8.821\n",
-      "Epoch   7 Batch  183/431   train_loss = 8.820\n",
-      "Epoch   7 Batch  311/431   train_loss = 8.822\n",
-      "Epoch   8 Batch    8/431   train_loss = 8.820\n",
+      "Epoch   5 Batch  405/431   train_loss = 8.822\n",
+      "Epoch   6 Batch  102/431   train_loss = 8.821\n",
+      "Epoch   6 Batch  230/431   train_loss = 8.823\n",
+      "Epoch   6 Batch  358/431   train_loss = 8.821\n",
+      "Epoch   7 Batch   55/431   train_loss = 8.824\n",
+      "Epoch   7 Batch  183/431   train_loss = 8.822\n",
+      "Epoch   7 Batch  311/431   train_loss = 8.821\n",
+      "Epoch   8 Batch    8/431   train_loss = 8.825\n",
       "Epoch   8 Batch  136/431   train_loss = 8.823\n",
-      "Epoch   8 Batch  264/431   train_loss = 8.821\n",
-      "Epoch   8 Batch  392/431   train_loss = 8.821\n",
-      "Epoch   9 Batch   89/431   train_loss = 8.821\n",
+      "Epoch   8 Batch  264/431   train_loss = 8.822\n",
+      "Epoch   8 Batch  392/431   train_loss = 8.824\n",
+      "Epoch   9 Batch   89/431   train_loss = 8.823\n",
       "Epoch   9 Batch  217/431   train_loss = 8.822\n",
-      "Epoch   9 Batch  345/431   train_loss = 8.822\n",
-      "Epoch  10 Batch   42/431   train_loss = 8.821\n",
-      "Epoch  10 Batch  170/431   train_loss = 8.823\n",
-      "Epoch  10 Batch  298/431   train_loss = 8.822\n",
+      "Epoch   9 Batch  345/431   train_loss = 8.824\n",
+      "Epoch  10 Batch   42/431   train_loss = 8.824\n",
+      "Epoch  10 Batch  170/431   train_loss = 8.822\n",
+      "Epoch  10 Batch  298/431   train_loss = 8.823\n",
       "Epoch  10 Batch  426/431   train_loss = 8.822\n",
-      "Epoch  11 Batch  123/431   train_loss = 8.822\n",
-      "Epoch  11 Batch  251/431   train_loss = 8.821\n",
-      "Epoch  11 Batch  379/431   train_loss = 8.822\n",
+      "Epoch  11 Batch  123/431   train_loss = 8.820\n",
+      "Epoch  11 Batch  251/431   train_loss = 8.824\n",
+      "Epoch  11 Batch  379/431   train_loss = 8.823\n",
       "Epoch  12 Batch   76/431   train_loss = 8.821\n",
-      "Epoch  12 Batch  204/431   train_loss = 8.821\n",
-      "Epoch  12 Batch  332/431   train_loss = 8.820\n",
-      "Epoch  13 Batch   29/431   train_loss = 8.822\n",
+      "Epoch  12 Batch  204/431   train_loss = 8.823\n",
+      "Epoch  12 Batch  332/431   train_loss = 8.823\n",
+      "Epoch  13 Batch   29/431   train_loss = 8.823\n",
       "Epoch  13 Batch  157/431   train_loss = 8.821\n",
-      "Epoch  13 Batch  285/431   train_loss = 8.819\n",
-      "Epoch  13 Batch  413/431   train_loss = 8.821\n",
-      "Epoch  14 Batch  110/431   train_loss = 8.822\n",
-      "Epoch  14 Batch  238/431   train_loss = 8.821\n",
-      "Epoch  14 Batch  366/431   train_loss = 8.821\n",
-      "Epoch  15 Batch   63/431   train_loss = 8.821\n",
-      "Epoch  15 Batch  191/431   train_loss = 8.823\n",
-      "Epoch  15 Batch  319/431   train_loss = 8.820\n",
-      "Epoch  16 Batch   16/431   train_loss = 8.820\n",
-      "Epoch  16 Batch  144/431   train_loss = 8.821\n",
-      "Epoch  16 Batch  272/431   train_loss = 8.821\n",
-      "Epoch  16 Batch  400/431   train_loss = 8.822\n",
-      "Epoch  17 Batch   97/431   train_loss = 8.822\n",
-      "Epoch  17 Batch  225/431   train_loss = 8.821\n",
-      "Epoch  17 Batch  353/431   train_loss = 8.822\n",
-      "Epoch  18 Batch   50/431   train_loss = 8.822\n",
+      "Epoch  13 Batch  285/431   train_loss = 8.824\n",
+      "Epoch  13 Batch  413/431   train_loss = 8.822\n",
+      "Epoch  14 Batch  110/431   train_loss = 8.821\n",
+      "Epoch  14 Batch  238/431   train_loss = 8.822\n",
+      "Epoch  14 Batch  366/431   train_loss = 8.825\n",
+      "Epoch  15 Batch   63/431   train_loss = 8.822\n",
+      "Epoch  15 Batch  191/431   train_loss = 8.821\n",
+      "Epoch  15 Batch  319/431   train_loss = 8.823\n",
+      "Epoch  16 Batch   16/431   train_loss = 8.822\n",
+      "Epoch  16 Batch  144/431   train_loss = 8.822\n",
+      "Epoch  16 Batch  272/431   train_loss = 8.823\n",
+      "Epoch  16 Batch  400/431   train_loss = 8.823\n",
+      "Epoch  17 Batch   97/431   train_loss = 8.823\n",
+      "Epoch  17 Batch  225/431   train_loss = 8.822\n",
+      "Epoch  17 Batch  353/431   train_loss = 8.823\n",
+      "Epoch  18 Batch   50/431   train_loss = 8.823\n",
       "Epoch  18 Batch  178/431   train_loss = 8.823\n",
-      "Epoch  18 Batch  306/431   train_loss = 8.823\n",
-      "Epoch  19 Batch    3/431   train_loss = 8.820\n",
-      "Epoch  19 Batch  131/431   train_loss = 8.821\n",
-      "Epoch  19 Batch  259/431   train_loss = 8.822\n",
-      "Epoch  19 Batch  387/431   train_loss = 8.819\n",
+      "Epoch  18 Batch  306/431   train_loss = 8.822\n",
+      "Epoch  19 Batch    3/431   train_loss = 8.822\n",
+      "Epoch  19 Batch  131/431   train_loss = 8.823\n",
+      "Epoch  19 Batch  259/431   train_loss = 8.823\n",
+      "Epoch  19 Batch  387/431   train_loss = 8.821\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,9 +900,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
@@ -911,7 +919,11 @@
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None, None\n",
+    "    input = loaded_graph.get_tensor_by_name('input:0')\n",
+    "    initial_state = loaded_graph.get_tensor_by_name('initial_state:0')\n",
+    "    final_state = loaded_graph.get_tensor_by_name('final_state:0')\n",
+    "    probs = loaded_graph.get_tensor_by_name('probs:0')\n",
+    "    return input, initial_state, final_state, probs\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -930,9 +942,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -942,7 +962,12 @@
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    maximum_prob = max(probabilities)\n",
+    "    for i, prob in enumerate(probabilities):\n",
+    "        if prob == maximum_prob:\n",
+    "            position = i\n",
+    "    word = int_to_vocab[position]\n",
+    "    return word\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -961,9 +986,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moe_szyslak: obese gel completing information information kids' nightmare nightmare clearing clearing patrick's linin' could've could've lot lot go go go go dog's indigenous indigenous sports scully scully natured natured natured natured dying dying duh duh duh gargoyles gargoyles gargoyles tense tense poorer poorer poorer frankenstein frankenstein frankenstein sounds brick brick brick frankenstein frankenstein brick fury?? louie: louie: pay johnny johnny johnny johnny prize prize advertising advertising advertising advertising advertising advertising advertising advertising advertising advertising harm harm harm harm calmly co-sign co-sign ferry ferry harm harm roz roz goldarnit crystal traitors traitors title: title: important important important grope grope grope snackie sec_agent_#1: sec_agent_#1: spied spied hank_williams_jr spied like like like meaningfully meaningfully jackpot's jackpot's whaaa whaaa whaaa schizophrenia furniture furniture i/you mirthless stagy stagy stagy ignorant oil oil free felt martini martini zeal zeal wistful however however however however refund refund refund speak happily sexual sexual sexual sexual moesy moesy effigy effigy effigy effigy bugging bugging sleep moon-bounce moon-bounce moon-bounce moon-bounce 50-60 50-60 50-60 lovers' lovers' lovers' lovers' release release release release unintelligent thought_bubble_lenny: unintelligent jeez unintelligent jeez unintelligent above above above land land land land land land capitalists capitalists shutting shutting sloe aggravazes aggravazes laughter laughter eighty-seven obsessive-compulsive obsessive-compulsive\n"
+     ]
+    }
+   ],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
@@ -1020,6 +1053,13 @@
     "# Submitting This Project\n",
     "When submitting this project, make sure to run all the cells before saving the notebook. Save the notebook file as \"dlnd_tv_script_generation.ipynb\" and save it as a HTML file under \"File\" -> \"Download as\". Include the \"helper.py\" and \"problem_unittests.py\" files in your submission."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
